# python-testbed

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/input/: garbage.txt
src/: __init__.py
src/ai/: __init__.py
src/ai/providers/: __init__.py  anthropic_chat.py  google_ai_studio.py  openrouter_chat.py
src/docs/: delete_s3_bucket_documents.py  extracted_text_to_json.py  markdown_to_docx.py  pdf_to_text.py
src/document_processing/: __init__.py
src/document_processing/conversion/: __init__.py  extracted_text_to_json.py  garbage_text_cleaner.py  markdown_to_docx.py
src/document_processing/extraction/: __init__.py  pdf_to_text.py
src/document_processing/storage/: __init__.py  delete_s3_bucket_documents.py
src/integrations/: __init__.py
src/integrations/email/: __init__.py  outlook_mailbox.py
src/llm/anthropic/: anthropic_chat.py
src/llm/google/: google_ai_studio.py
src/llm/openrouter/: openrouter_chat.py
src/project_structure/: __init__.py  create_structure_from_json.py  export_project_structure.py
src/security/: __init__.py
src/security/tokens/: __init__.py  generate_jwt_secret_key.py
tests/: test_cli_smoke.py
