[project]
name = "python-testbed"
version = "0.1.0"
description = "Public utility scripts for AI providers, document processing, security helpers, and project scaffolding"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.37.0",
    "google-genai>=1.30.0",
    "pypandoc-binary>=1.13",
    "pypdf>=5.9.0",
    "python-dotenv>=1.2.1",
]

[project.scripts]
anthropic-chat = "src.ai.providers.anthropic_chat:main"
openrouter-chat = "src.ai.providers.openrouter_chat:main"
google-models = "src.ai.providers.google_ai_studio:main"
outlook-mailbox = "src.integrations.email.outlook_mailbox:main"
markdown-to-docx = "src.document_processing.conversion.markdown_to_docx:main"
pdf-to-text = "src.document_processing.extraction.pdf_to_text:main"
text-to-json-string = "src.document_processing.conversion.extracted_text_to_json:main"
clean-garbage-text = "src.document_processing.conversion.garbage_text_cleaner:main"
s3-delete-objects = "src.document_processing.storage.delete_s3_bucket_documents:main"
generate-jwt-secret = "src.security.tokens.generate_jwt_secret_key:main"
create-structure-from-json = "src.project_structure.create_structure_from_json:main"
export-project-structure = "src.project_structure.export_project_structure:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
    "pre-commit>=3.8.0",
    "detect-secrets>=1.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
